--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -541,16 +541,16 @@ We started out with the observation that preregistrations do no always cleanly d
 Enforcing this distinction would mean to use preregistrations as a means to increase the theorethical risk researcher take on.
 No doubt this results in more trustworthy evidence and may even increase the effectiveness of scientific undertakings in general.
 However, as argued earlier, directly maximizing theoretical risk increases the likelihood that a study fails to deliver results favoring the theory (a special instance of this problem is the well-known trade-off of statistical power and type-I error rate).
-As we further argued, minimizing the uncertainty about theoretical risk is similarly beneficial without increasing the likelihood of a "failed" study.
+As we further argued, minimizing the uncertainty about theoretical risk (without necessarily changing the theoretical risk itself) has benefits for the epistemic value, too, but without increasing the likelihood of producing a "failed" study. <!--AB: is my rephrasing correct?-->
 Note that any single study that does not produce evidence in favor of a research hypothesis is still precious for the scientific process. <!--AB: is my rephrasing correct? Please elaborate more. Why is it helpful? In the sense of a meta-analysis? -->
-Under the current incentive structure in academia, however, many researchers have reason to avoid such negative outcomes and few, if any, have the privilege to operate outside of these incentives. <!--AB: but see registered reports, journals that increasingly publish null findings, Bayesian analyses etc-->
+Under the current incentive structure in academia, however, many researchers have reason to avoid such negative outcomes and few, if any, have the privilege to operate outside of these incentives. <!--AB: but see registered reports, journals that increasingly publish null findings, Bayesian analyses etc; I am not sure whether we need these last two sentences? -->
 
-The advantage of this perspective that puts uncertainty about theoretical risk front and center is twofold.
-First, aiming to reduce uncertainty is beneficial across a wide range of potential theoretical risks.
-That is, researchers benefit from preregistrating their study, regardless whether or not the study is "exploratory".
-If researchers conduct a more exploratory study they can clearly communicate how exploratory they aim to be and their results can be judged accordingly.
+In our view, the advantage of underlining uncertainty reduction about theoretical risk front and center is two-fold.
+First, aiming to reduce uncertainty is beneficial across a wide range of potential theoretical risks. <!--AB: do you refer to the risk functions in Fig2? I am not sure; or type of studies?!-->
+That is, researchers benefit from preregistrating their study, regardless whether or not the study is "exploratory". <!--AB: this point, I still do not get; the more exploratory a study, the less I can reduce uncertainty to the extreme that I have full uncertainty; but I assume your argument is that whatever reduction in uncertainty is possible is beneficial; but in practice: as a reader: how can I really judge this continuum of uncertainty from a given manuscript??-->
+If researchers conduct a more exploratory study they can clearly communicate how exploratory they aim to be and their results can be judged accordingly. <!--AB to repeat: this is still a claim that yet has to stand the test of reality. how should we do this really? I think we need to stress that this is a philosophical perspective rather than a tutorial on how to do this in practice. But... can we give practical advise?-->
 Second, if researchers realize after the fact, that it would be unwise to follow their preregistration in certain details, they may change it.
-Allowing to deviate from the preregistration is controversial (XXX) because the authors might sift through all the possibilities and then select the most beneficial for their theory.
+Allowing to deviate from the preregistration is controversial (XXX) because the authors might sift through all the possibilities and then select the most beneficial for their theory. <!--AB: can you connect this to the probability terms, e.g., thus they reduce their actual theoretical risk through QRPs?-->
 This argument, in its fullest consequence, might result in the same uncertainty we argued is appropriate for not preregistered studies.
 However, if the authors offer a convincing argument for their deviation, their readers might believe it to be a likely explanation for the deviation.
 If the readers find the reason for the deviation likely to be something other than decreasing the theorethical risk, their uncertainty about the theorethical risk should only increase modestly.
