--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -153,7 +153,7 @@ Consequently, researchers have an incentive to appear to take more risks than th
 It is at this juncture that the practice and mispractice of preregistration comes into play.
 We argue that the main function of preregistration is to enable proper judgment of the riskiness of a study.
 
-To better understand how preregistrations can do that, let us take a closer look at what contributes to $P(E)$.
+To better understand how preregistrations can achieve that, let us take a closer look at what factors contribute to $P(E)$. <!--AB: is this expectedness (Pap, 1962) as quoted on p.818 in Meehl's risk paper?-->
 Using the law of total probability, we can split $P(E)$ into two terms:
 
 $$
@@ -177,31 +177,35 @@ He stated that if it is impossible to prove a hypothesis false ($P(¬E|¬H) = 0$
 We note these relations to underline that the Bayesian rational we apply here is able to reconstruct many commonly held views on riskiness and epistemic value.
 
 Both theorethical risk ($P(¬E|¬H)$) and detectability ($P(E|H)$) aggregate uncountable influences, otherwise they could not model the process of evidential support for theories.
-To make these concepts less abstract, consider the following illustrative example of a theory and different experiments that test it.
-Suppose the theory is about the cognitive phenomenon of "insight", and allow us to define it somewhat hand-waving as an cognitive abstraction that allows agents to consistently solve a well defined class of problems.
+To illustrate the concepts we introduced up to here, consider the following  example of a single theory and three experiments that may test it. 
+The experiments were created to illustrate how they may differ in their theoretical risk and detectability.
+Suppose the primary theory is about the cognitive phenomenon of "insight".
+For the purpose of illustration, we define it somewhat hand-wavinlyg as an cognitive abstraction that allows agents to consistently solve a well-defined class of problems.
 We pose the hypothesis that the following problem belongs to such class of insight problems:
 
 > Use five matches (Ⅰ Ⅰ Ⅰ Ⅰ Ⅰ) to form the number eight. 
 
 We propose three experiments that differ in theoretical risk and detectability.
-All take a sample of ten psychology students and present them the problem for brief span of time.
-After that:
+All experiments take a sample of ten psychology students.
+We present the students the problem for a brief span of time.
+After that, the three experiments differ as follows:
 
-1. the experimenter explains that with roman-numerals the problem is easy to solve; if all students come up with the solution, she records it as evidence for the hypothesis.
+1. the experimenter gives a hint that  the problem is easy to solve when using Roman numerals; if all students come up with the solution, she records it as evidence for the hypothesis.
 2. the experimenter shows the solution "Ⅷ" and explains it; if all students come up with the solution, she records it as evidence for the hypothesis.
 3. the experimenter does nothing; if all students come up with the solution, she records it as evidence for the hypothesis.
 
 We argue that experiment 1 has high theoretical risk ($P(¬E_1|¬H)$) and high detectability ($P(E_1|H)$).
 If "insight" has nothing to do with solving the problem ($¬H$), than presenting the insight that roman literals might be used, should not lead to all students solving the problem ($¬E_1$); the experiment has therefore high theoretical risk ($P(¬E_1|¬H)$)
 Conversly, if insight is required to solve the problem ($H$), than it is probable to help all students to solve the problem ($E_1$); the experiment has therefore high detectability ($P(E_1|H)$).
-The experiment 2 on the other hand, has low theoretical risk ($P(¬E_2|¬H)$).
-Even if "insight" has nothing to do with solving the problem ($¬H$), there are other plausible reasons for observing the evidence ($E_2$), because the students can simply copy the solution, without any insight.
+The second experiment, on the other hand, has low theoretical risk ($P(¬E_2|¬H)$).
+Even if "insight" has nothing to do with solving the problem ($¬H$), there are other plausible reasons for observing the evidence ($E_2$), because the students could simply copy the solution, without having any insight.
 With regard to detectability experiment 1 and 2 differ in no obvious way.
-Experiment 3, however, has low detectability.
+Experiment 3, however, also has low detectability.
 It is unlikely that all students come up with the correct solution in a short time ($E_3$), even if insight is required ($H$); the experiment 3 has therefore low detectability ($P(E_3|H)$).
 The theoretical risk, however, is also low in absolute terms but high compared to the theoretical risk.
 In the unlikely event that all 10 students lay the matches down in the form of the roman numeral Ⅷ ($E_3$) it is probably due to insight ($H$) and not by chance $P(¬E_2|¬H)$).
-Of course, it comes to mind to allow the evidence to be probabilistic, e.g., relax the requirement of "all students" to nine out of ten students, more than eight, and so forth.
+Of course, in practice, we would allow the evidence to be probabilistic, e.g., relax the requirement of "all students" to nine out of ten students, more than eight, and so forth.
+As argued earlier, the remainder of the paper will focus on binary, non-probabilisitic evidence to keep the mathematical notation as simple as possible.
 We discuss the relation between statistical methods and theoretical risk in the section [Statistical Methods]. 
 
 ```{r, include=FALSE}
